# mystique

./: .gitignore  Makefile  README.md  justfile  matcher.py  predicates.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
src/: matcher.py
tests/: matcher1.json  test_matcher.py  test_predicates.py
