[project]
name = "mystique"
version = "0.3.2"
authors = [
  { name="Jono Finger", email="jono@foodnotblogs.com" },
]
description = "A loose data matcher to help you write Python tests"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "beartype==0.14.0",
  "deepdiff==6.3.0",
]

[project.urls]
"Homepage" = "https://github.com/jonocodes/mystique"
"Bug Tracker" = "https://github.com/jonocodes/mystique/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"